# parsimony-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  release.yml
docs/: api-reference.md  configuration.md  index.md  installation.md  programmatic-use.md  troubleshooting.md
examples/: claude_desktop_config.json  custom_filter.py  mcp.json  programmatic_server.py
parsimony_mcp/: __init__.py  __main__.py  _env.py  _logging.py  bridge.py  init.py  server.py
tests/: conftest.py  test_agent_contract.py  test_bridge.py  test_env.py  test_init.py  test_logging.py  test_secret_leakage_guards.py  test_server.py
